src/objects/MCC_Data_Object__c.object
<CustomObject>
    <description>Intermediate object for Mass Case Creation and Death File.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mass Case Creation Records</relationshipLabel>
        <relationshipName>Mass_Case_Creation_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Error_Message__c</fullName>
        <description>Used to capture the error message for analysis by the provider contact team</description>
        <label>Admin_Error_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoDelReceivedDate__c</fullName>
        <label>AutoDelReceivedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_providers_N_P_seeing_members_0_21__c</fullName>
        <label>BH providers (N-P) seeing members 0-21</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_providers_N_P_seeing_members_22__c</fullName>
        <label>BH providers (N-P) seeing members 22+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_providers_N_p_seeing_members_both__c</fullName>
        <label>BH providers (N-p) seeing members (both)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_PFIN__c</fullName>
        <label>Bill PFIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blindness_or_Visual_Impairment_Provider__c</fullName>
        <label>Blindness or Visual Impairment Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAQH_Number__c</fullName>
        <label>CAQH Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>Field added as a part of PPN-22972</description>
        <formula>Text(MCC_Case_Id__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chronic_Illness_Provider__c</fullName>
        <label>Chronic Illness Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Occurring_Disorders_Provider__c</fullName>
        <label>Co-Occurring Disorders Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Code__c</fullName>
        <label>Comp Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Cycle__c</fullName>
        <label>Cred Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Date__c</fullName>
        <label>Cred Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Time_Stamp__c</fullName>
        <description>Used to capture the Cred Status Time Stamp as per story PPN-41284</description>
        <label>Cred Status Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status__c</fullName>
        <label>Cred Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUE_Comp_Code__c</fullName>
        <label>DUE Comp Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUE_Site_ID__c</fullName>
        <label>DUE Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deafness_or_Hard_of_Hearing_Provider__c</fullName>
        <label>Deafness or Hard of Hearing Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Received_Date__c</fullName>
        <label>Dept Received Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Used to capture the error message when updating/creating the case</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exam_Room__c</fullName>
        <label>Exam Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Table__c</fullName>
        <label>Exam Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_and_Interior_Building__c</fullName>
        <label>External and Interior Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Count__c</fullName>
        <description>This field will hold the count the no rows processed within the mass file uploads ( Tx Recruitment, Il Roaster , Mass case closure and mass Cred status update)</description>
        <label>File Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_Close__c</fullName>
        <label>Friday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Open__c</fullName>
        <label>Friday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <label>Government</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIV_AIDS_Provider__c</fullName>
        <label>HIV/AIDS Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handicap_Accessible__c</fullName>
        <label>Handicap Accessible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homebound_Members__c</fullName>
        <label>Homebound Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeless_Population_Provider__c</fullName>
        <label>Homeless Population Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Affiliation__c</fullName>
        <label>Hospital Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institute_for_Mental_Diseases__c</fullName>
        <label>Institute for Mental Diseases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lang_Line_Interpreter__c</fullName>
        <label>Lang Line Interpreter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Assignee_ID__c</fullName>
        <label>Assignee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Billing_NPI__c</fullName>
        <label>Billing NPI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>MCC_Data_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCC_Case_Status__c</fullName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Case_Type__c</fullName>
        <label>Case Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCC_Corp_Recd_Date__c</fullName>
        <description>TX Specific</description>
        <label>Corp Received Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Creator_User_ID__c</fullName>
        <label>Creator User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_DOB__c</fullName>
        <label>Date of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCC_File_Id__c</fullName>
        <label>File Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_First_Name__c</fullName>
        <label>First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Grouping_ID__c</fullName>
        <description>TX Specific</description>
        <label>Grouping ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Load_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Override_Queue__c</fullName>
        <label>Override Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_PFIN__c</fullName>
        <label>PFIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Plan_ID__c</fullName>
        <description>For all loads</description>
        <label>Plan ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Premier_DOB__c</fullName>
        <label>Premier DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Premier_First_Name__c</fullName>
        <label>Premier First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Premier_Last_Name__c</fullName>
        <label>Premier Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCC_Project_Number__c</fullName>
        <description>TX Specific</description>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Prov_ID__c</fullName>
        <description>For Death and TX Data</description>
        <label>Provider ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Request_Type__c</fullName>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCD_Comp_Code__c</fullName>
        <label>MCD Comp Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCD_Site_ID__c</fullName>
        <label>MCD Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid_ID__c</fullName>
        <label>Medicaid ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_ID__c</fullName>
        <label>Medicare ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Close__c</fullName>
        <label>Monday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Open__c</fullName>
        <label>Monday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetOps_Received_Date__c</fullName>
        <label>NetOps Received Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Reception_Area__c</fullName>
        <label>Office Reception Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Case_ID__c</fullName>
        <label>Onboarding Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Accessibility__c</fullName>
        <label>Parking Accessibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Disabilities_Provider__c</fullName>
        <label>Physical Disabilities Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_for_reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to validate whether success and report has been processed for this record or not</description>
        <label>Processed for reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Line_Number__c</fullName>
        <label>Project Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Code__c</fullName>
        <label>Provider Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Transportation__c</fullName>
        <label>Public Transportation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Cred_Date__c</fullName>
        <description>Re-Cred Date</description>
        <label>Re-Cred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restroom__c</fullName>
        <label>Restroom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Code__c</fullName>
        <label>Role Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Close__c</fullName>
        <label>Saturday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Open__c</fullName>
        <label>Saturday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serious_Mental_Illness_Provider__c</fullName>
        <label>Serious Mental Illness Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_1__c</fullName>
        <label>Service Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_2__c</fullName>
        <label>Service Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zip_Code__c</fullName>
        <label>Service Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Code__c</fullName>
        <label>Specialty Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Specialty_Code__c</fullName>
        <label>Sub Specialty Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Close__c</fullName>
        <label>Sunday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunday_Open__c</fullName>
        <label>Sunday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Phys_License__c</fullName>
        <label>Supervising Phys License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervising_Physician__c</fullName>
        <label>Supervising Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNF_Comp_Code__c</fullName>
        <label>TNF Comp Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNF_Site_ID__c</fullName>
        <label>TNF Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Close__c</fullName>
        <label>Thursday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Open__c</fullName>
        <label>Thursday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Close__c</fullName>
        <label>Tuesday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Open__c</fullName>
        <label>Tuesday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Close__c</fullName>
        <label>Wednesday Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wednesday_Open__c</fullName>
        <label>Wednesday Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Case Creation Record</label>
    <nameField>
        <displayFormat>MCC-{0000}</displayFormat>
        <label>MCC Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Case Creation Records</pluralLabel>
    <recordTypes>
        <fullName>Death_File</fullName>
        <active>true</active>
        <description>Death File</description>
        <label>Death File</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Recruitment</fullName>
        <active>true</active>
        <description>Network Recruitment</description>
        <label>Network Recruitment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding_Cred_Mass_Status_Update</fullName>
        <active>true</active>
        <description>Onboarding Cred Mass Status Update</description>
        <label>Onboarding Cred Mass Status Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Roster</fullName>
        <active>true</active>
        <description>Roster</description>
        <label>Roster</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>